# Copyright (C) (2007) (Benoit Favre) <favre@icsi.berkeley.edu>
#
# This program is free software; you can redistribute it and/or 
# modify it under the terms of the GNU General Public License 
# as published by the Free Software Foundation; either 
# version 2 of the License, or (at your option) any later 
# version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

AC_PREREQ(2.59)
AC_INIT([icsiboost],[0.2],[favre@icsi.berkeley.edu])
#AC_CONFIG_SRCDIR([src/icsiboost.c])
AM_INIT_AUTOMAKE()
AM_CONFIG_HEADER([config.h])

case `uname` in
	*Darwin*)
	CFLAGS="$CFLAGS -fnested-functions"
	;;
esac
# Checks for programs.
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FSEEKO
AC_FUNC_MMAP
AC_FUNC_STRTOD
AC_CHECK_FUNCS([memmove memset munmap regcomp sqrt strdup strtol])

# generate version information
svn info|awk 'BEGIN{print "#ifndef _VERSION_H_\n#define _VERSION_H_\n#define SVN_INFO \\"}{print "\"  " $0 "\\n\" \\"}END{print "\"\"\n#endif"}' > src/version.h

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
